followed the steps on the themes github

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Builders Of The Future, Inc.</title>
 
   
-    <link rel="shortcut icon" href="https://fxiz0707.github.io/dad-website/images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
   
   
     <meta name="description" content="You don&#39;t even know what we can do for you!" />
@@ -22,10 +22,10 @@
   <meta property="og:title" content="" />
 <meta property="og:description" content="You don&#39;t even know what we can do for you!" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://fxiz0707.github.io/dad-website/" /><meta property="og:image" content="https://fxiz0707.github.io/dad-website/images/share-image.png" /><meta property="og:site_name" content="Builders Of The Future, Inc." />
+<meta property="og:url" content="/" /><meta property="og:image" content="/images/share-image.png" /><meta property="og:site_name" content="Builders Of The Future, Inc." />
 
   <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://fxiz0707.github.io/dad-website/images/share-image.png" /><meta name="twitter:title" content=""/>
+<meta name="twitter:image" content="/images/share-image.png" /><meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="You don&#39;t even know what we can do for you!"/>
 
   <meta itemprop="name" content="">
@@ -35,7 +35,7 @@
 
   
 
-<link href="https://fxiz0707.github.io/dad-website/css/main.d461983a0e4768ddb17fae0fec9186b7437b92361a0c294055525bd9293da2ae.css" rel="stylesheet" />
+<link href="/css/main.d461983a0e4768ddb17fae0fec9186b7437b92361a0c294055525bd9293da2ae.css" rel="stylesheet" />
 
 </head>
 <body><header id="header">
